--- a/app/kitchenstorefiori/package.json
+++ b/app/kitchenstorefiori/package.json
@@ -29,7 +29,7 @@
         "@ui5/logger": "^2.0.1",
         "@sap/ux-ui5-tooling": "1",
         "rimraf": "3.0.2",
-        "@sap/ux-specification": "latest",
+        "@sap/ux-specification": "1.100.0",
         "@sap/ux-ui5-fe-mockserver-middleware": "1",
         "@sap/ui5-builder-webide-extension": "1.0.x",
         "ui5-task-zipper": "^0.3.1",
