--- a/app/kitchenstorefiori/xs-app.json
+++ b/app/kitchenstorefiori/xs-app.json
@@ -1,24 +1,20 @@
 {
-  "welcomeFile": "/index.html",
-  "authenticationMethod": "route",
-  "routes": [
-    {
-      "source": "^/resources/(.*)$",
-      "target": "/resources/$1",
-      "authenticationType": "none",
-      "destination": "ui5"
+    "welcomeFile": "/index.html",
+    "authenticationMethod": "route",
+    "logout": {
+        "logoutEndpoint": "/do/logout"
     },
-    {
-      "source": "^/test-resources/(.*)$",
-      "target": "/test-resources/$1",
-      "authenticationType": "none",
-      "destination": "ui5"
-    },
-    {
-      "source": "^(.*)$",
-      "target": "$1",
-      "service": "html5-apps-repo-rt",
-      "authenticationType": "xsuaa"
-    }
-  ]
+    "routes": [
+        {
+            "csrfProtection": false,
+            "source": "^/product/",
+            "destination": "kitchen-app"
+        },
+        {
+            "source": "^(.*)$",
+            "target": "$1",
+            "service": "html5-apps-repo-rt",
+            "authenticationType": "xsuaa"
+        }
+    ]
 }
