--- a/mta.yaml
+++ b/mta.yaml
@@ -8,6 +8,8 @@ modules:
     path: gen/srv
     requires:
       - name: kitchen-app-db
+      - name: kitchen-app-logs
+      - name: kitchen-app-uaa
     provides:
       - name: srv-api
         properties:
@@ -21,13 +23,15 @@ modules:
     path: gen/db
     requires:
       - name: kitchen-app-db
+      - name: kitchen-app-logs
+      - name: kitchen-app-uaa
     parameters:
       buildpack: nodejs_buildpack
   - name: kitchen-app-app-content
     type: com.sap.application.content
     path: .
     requires:
-      - name: kitchen-app-repo-host
+      - name: kitchen-app_html_repo_host
         parameters:
           content-target: true
     build-parameters:
@@ -47,7 +51,42 @@ modules:
         - npm install
         - npm run build:cf
       supported-platforms: []
+  - name: kitchen-app-destination-content
+    type: com.sap.application.content
+    requires:
+    - name: kitchen-app-uaa
+      parameters:
+        service-key:
+          name: kitchen-app-uaa-key
+    - name: kitchen-app_html_repo_host
+      parameters:
+        service-key:
+          name: kitchen-app_html_repo_host-key
+    - name: kitchen-app-destination-service
+      parameters:
+        content-target: true        
+    parameters:
+      content:
+        subaccount:
+          destinations:
+          - Name: my_service_kitchen-app_html_repo_host
+            ServiceInstanceName: kitchen-app-html5-app-host-service
+            ServiceKeyName: kitchen-app_html_repo_host-key
+            sap.cloud.service: my_service
+          - Authentication: OAuth2UserTokenExchange
+            Name: my_service_kitchen-app-uaa
+            ServiceInstanceName: kitchen-app-xsuaa-service
+            ServiceKeyName: kitchen-app-uaa-key
+            sap.cloud.service: my_service
+          existing_destinations_policy: update    
+    build-parameters:
+      no-source: true
 resources:
+  - name: kitchen-app-logs
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: application-logs
+      service-plan: lite
   - name: kitchen-app-db
     type: com.sap.xs.hdi-container
     parameters:
@@ -55,30 +94,40 @@ resources:
       service-plan: hdi-shared
     properties:
       hdi-service-name: ${service-name}
-  - name: kitchen-app-repo-host
+  - name: kitchen-app-destination-service
+    type: org.cloudfoundry.managed-service
+    requires:
+      - name: srv-api
+    parameters:
+      service: destination
+      service-name: fiori-destination-service
+      service-plan: lite
+      config:
+        init_data:
+          subaccount:
+            existing_destinations_policy: update
+            destinations:
+              - Name: kitchen-app
+                Description: CAP sample service
+                Authentication: NoAuthentication
+                ProxyType: Internet
+                Type: HTTP
+                URL: ~{srv-api/srv-url}
+                HTML5.DynamicDestination: true
+                ForwardAuthToken: true
+  - name: kitchen-app_html_repo_host
     type: org.cloudfoundry.managed-service
     parameters:
       service: html5-apps-repo
-      service-name: kitchen-app-html5-srv
+      service-name: kitchen-app-html5-app-host-service
       service-plan: app-host
-  - name: kitchen-app-dest-srv
+  - name: kitchen-app-uaa
     type: org.cloudfoundry.managed-service
     parameters:
-      config:
-        HTML5Runtime_enabled: false
-        init_data:
-          instance:
-            destinations:
-              - Authentication: NoAuthentication
-                Name: ui5
-                ProxyType: Internet
-                Type: HTTP
-                URL: https://ui5.sap.com
-            existing_destinations_policy: update
-        version: 1.0.0
-      service: destination
-      service-name: kitchen-app-dest-srv
-      service-plan: lite
+      path: ./xs-security.json
+      service: xsuaa
+      service-name: kitchen-app-xsuaa-service
+      service-plan: application
 parameters:
   deploy_mode: html5-repo
   enable-parallel-deployments: true
