--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "license": "UNLICENSED",
     "private": true,
     "dependencies": {
-        "@sap/cds": "^5",
+        "@sap/cds": "^5.4.6",
+        "@sap/hana-client": "^2.10.15",
+        "@sap/xsenv": "^3.1.1",
+        "@sap/xssec": "^3.2.9",
         "express": "^4",
-        "hdb": "^0.18.3"
+        "hdb": "^0.18.3",
+        "passport": "^0.5.0",
+        "socket.io": "^4.2.0"
     },
     "devDependencies": {
+        "@sap/hdi-deploy": "^4.2.0",
+        "@sap/ux-specification": "^1.90.13",
         "sqlite3": "^5.0.2"
     },
     "scripts": {
@@ -43,13 +50,16 @@
         }
     },
     "cds": {
+        "hana": {
+            "deploy-format": "hdbtable"
+        },
         "requires": {
             "db": {
                 "kind": "sql"
+            },
+            "uaa": {
+                "kind": "xsuaa"
             }
-        },
-        "hana": {
-            "deploy-format": "hdbtable"
         }
     }
 }
