--- a/app/kitchenstorefiori/webapp/manifest.json
+++ b/app/kitchenstorefiori/webapp/manifest.json
@@ -208,5 +208,9 @@
         "_version": "1.1.0",
         "registrationIds": [],
         "archeType": "transactional"
+    },
+    "sap.cloud": {
+        "public": true,
+        "service": "my_service"
     }
 }
