add picture to product groups

--- a/app/kitchenstorefiori/xs-app.json
+++ b/app/kitchenstorefiori/xs-app.json
@@ -7,7 +7,7 @@
     "routes": [
         {
             "csrfProtection": false,
-            "source": "^/product/",
+            "source": "^/Product/",
             "destination": "kitchen-app"
         },
         {
